website/websites/u64q/code/mandelbrot.7.pypy3.log

Wed, 08 Apr 2015 11:44:45 GMT

COMMAND LINE:
/usr/bin/pypy3 mandelbrot.pypy3-7.pypy3 1000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "mandelbrot.pypy3-7.pypy3", line 58
    yield from map(f, row_jobs)
         ^
SyntaxError: invalid syntax
